force-app/main/default/objects/AG_Service__c/fields/AG_From_Date__c.field-meta.xml
<CustomField>
    <fullName>AG_From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>