force-app/main/default/objects/AG_Service__c/fields/AG_Sub_Services__c.field-meta.xml
<CustomField>
    <fullName>AG_Sub_Services__c</fullName>
    <label>Sub Services</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AG_Service_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Employement</fullName>
            </value>
            <value>
                <fullName>Drugs and Alcohols</fullName>
            </value>
            <value>
                <fullName>Incarceration Support</fullName>
            </value>
            <value>
                <fullName>Intellectual Disability / Autism</fullName>
            </value>
            <value>
                <fullName>LGBTQ</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Safety Tips</fullName>
            </value>
            <value>
                <fullName>Veterans Services</fullName>
            </value>
            <value>
                <fullName>Developmental Delays Disabilities</fullName>
            </value>
            <value>
                <fullName>Parent and Caregiver Support</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Home Repair and Safety</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utility Assistance</fullName>
            </value>
            <value>
                <fullName>Food Assistance</fullName>
            </value>
            <value>
                <fullName>Housing and Homeless</fullName>
            </value>
            <value>
                <fullName>Child Protection</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Justice Related Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>