force-app/main/default/objects/AG_Service__c/fields/AG_To_Date__c.field-meta.xml
<CustomField>
    <fullName>AG_To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>