force-app/main/default/objects/AG_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AG_Referral__c</columns>
    <columns>AG_Service_Type__c</columns>
    <columns>AG_Sub_Services__c</columns>
    <columns>AG_From_Date__c</columns>
    <columns>AG_To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>